--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="es" ng-app="videoGallery">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../bower_components/angular-scrollable-table/scrollable-table.css">
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bower_components/angular-scrollable-table/scrollable-table.css">
 
 </head>
 <body>
@@ -11,13 +11,13 @@
 	<div ng-view></div>
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/angular/angular.min.js"></script>
-<script src="../bower_components/angular-route/angular-route.min.js"></script>
-<script src="../bower_components/angular-resource/angular-resource.min.js"></script>
-<script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-<script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<script src="../bower_components/angular-scrollable-table/angular-scrollable-table.min.js"></script>
-<script src="angularMain.js"></script> 
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
+<script src="bower_components/angular-resource/angular-resource.min.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<script src="bower_components/angular-scrollable-table/angular-scrollable-table.min.js"></script>
+<script src="static/public/angularMain.js"></script> 
 
 </body>
 </html>
