still ordering the content of the project

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<h1>Video List App using AngularJS</h1>
 	<div ng-view></div>
 
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="bower_components/angular-scrollable-table/angular-scrollable-table.min.js"></script>
-<script src="static/public/angularMain.js"></script> 
+<script src="angularMain.js"></script> 
 
 </body>
 </html>
